Initial commit of tiny-simple-peer, which removes node polyfill dependencies and duplex stream support from simple-peer

--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "simple-peer",
-  "description": "Simple one-to-one WebRTC video/voice and data channels",
-  "version": "9.11.1",
-  "author": {
-    "name": "Feross Aboukhadijeh",
-    "email": "feross@feross.org",
-    "url": "https://feross.org"
-  },
+  "name": "tiny-simple-peer",
+  "description": "Simple one-to-one WebRTC video/voice and data channels, which drops stream support from simple-peer to improve performance and reduce bundle size",
+  "version": "10.0.0",
+  "contributors": [
+    {
+      "name": "Feross Aboukhadijeh",
+      "email": "feross@feross.org",
+      "url": "https://feross.org"
+    },
+    {
+      "name": "Greg Fodor",
+      "email": "gfodor@gmail.com",
+      "url": "https://github.com/gfodor"
+    }
+  ],
   "bugs": {
-    "url": "https://github.com/feross/simple-peer/issues"
+    "url": "https://github.com/gfodor/tiny-simple-peer/issues"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
     "debug": "^4.3.2",
     "err-code": "^3.0.1",
+    "events": "^3.3.0",
     "get-browser-rtc": "^1.1.0",
     "queue-microtask": "^1.2.3",
-    "randombytes": "^2.1.0",
-    "readable-stream": "^3.6.0"
+    "random-string": "^0.2.0"
   },
   "devDependencies": {
     "airtap": "^4.0.3",
@@ -57,11 +63,11 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/feross/simple-peer.git"
+    "url": "git://github.com/gfodor/tiny-simple-peer.git"
   },
   "scripts": {
-    "build": "browserify -s SimplePeer -r . | minify > simplepeer.min.js",
-    "size": "npm run build && cat simplepeer.min.js | gzip | wc -c",
+    "build": "browserify -s TinySimplePeer -r . | minify > tinysimplepeer.min.js",
+    "size": "npm run build && cat tinysimplepeer.min.js | gzip | wc -c",
     "// test": "standard && npm run test-node && npm run test-browser",
     "test": "standard && npm run test-browser",
     "test-browser": "airtap --coverage --concurrency 1 -- test/*.js",
