--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test": "standard && npm run test-browser",
     "test-browser": "airtap --coverage --concurrency 1 -- test/*.js",
     "test-browser-local": "airtap --coverage --preset local -- test/*.js",
-    "test-node": "set WRTC=wrtc && tape test/*.js",
+    "test-node": "WRTC=wrtc tape test/*.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "funding": [
