--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "err-code": "^3.0.1",
     "events": "^3.3.0",
     "get-browser-rtc": "^1.1.0",
-    "random-string": "^0.2.0"
+    "crypto-random-string": "^5.0.0"
   },
   "devDependencies": {
     "airtap": "^4.0.3",
